fixes profile picture, displays code input by user and fixes user input text invisibility

--- a/src/pages/InterviewBot/InterviewBot.css
+++ b/src/pages/InterviewBot/InterviewBot.css
@@ -64,11 +64,10 @@
   text-align: initial;
   flex-direction: column;
   overflow: hidden;
-  padding: 5px;
-  width: 40vw;
-  height: 516px;
+  padding: 10px;
+  width: 660px;
   border-radius: 15px;
-  background-color: #fff;
+  background-color: rgb(239, 246, 255);
 }
 
 .jump-to-bottom-button {
@@ -170,11 +169,10 @@
 
 .send-code-button {
   background-color: rgb(226, 232, 240);
-  display: inline-block;
-  padding: 8px 16px;
+  padding: 15px;
   width: fit-content;
   margin: 5px;
-  border-radius: 20px;
+  border-radius: 28px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
@@ -190,8 +188,8 @@
   flex-direction: column;
 }
 
-.disabledIcon:hover{
-  cursor:auto;
+.disabledIcon:hover {
+  cursor: auto;
   background-color: rgb(226, 232, 240) !important;
   color: rgb(102, 102, 102) !important;
 }
